--- a/HPlusSport.Security.Web/HPlusSport.Security.Web.csproj
+++ b/HPlusSport.Security.Web/HPlusSport.Security.Web.csproj
@@ -18,6 +18,8 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="8.0.4" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
+    <PackageReference Include="Swashbuckle.AspNetCore.Swagger" Version="6.7.1" />
   </ItemGroup>
 
   <ItemGroup>
